--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -1,52 +1,33 @@
 <h1>Caesar Salad</h1>
     <img src="../images/Caesar-Salad-Recipe-3.jpg" alt="A Splendid Caesar Salad" width="500">
         <h2>Description</h2>
-            <p>In coastal areas of Canada and New England where fish was abundant, salmon was commonly used for making tourtière. Salmon pie is a simple but delicious pie made from a combination of salmon, potatoes, onions, seasonings, and baked in a flaky piecrust.</p>
-            <p>This recipe for salmon pie is a seaside version of the classic French Canadian meat pie. It is often served right along with meat pie on Christmas Eve and New Years Eve.</p>
+            <p>Classic Caesar Salad with crisp homemade croutons and a light caesar dressing - for when you want to impress your dinner guests.</p>
         <h2>Ingredients</h2>
             <ul>
-                <li>2 cups flour</li>
-                <li>butter</li>
-                <li>1 egg</li>
-                <li> potatoes</li>
-                <li>salmon</li>
-                <li>onions</li>
-                <li>milk</li>
-                <li>lemon juice</li>
-                <li>dill</li>
+                <li>1 large or 2 small heads of romaine lettuce</li>
+                <li>Parmesan cheese, shredded or shaved</li>
+                <li>Crisp croutons - homemade can be made several days ahead. The recipe below makes enough for 2 salads.</li>
+                <li> Caesar salad dressing - homemade is best and here is our favorite store-bought dressing in a pinch</li>
             </ul>
         <h2>Steps</h2>
             <ul>
-                <li>Prepare the Pie Pastry</li>
-                    <ol>
-                        <li>In a large bowl, combine flour and salt. Cut in butter or lard until mixture is an even crumbly texture. Add cold water a tablespoon at a time and mix until dough comes together.</li>
-                        <li>Shape the dough into a disc, wrap, and chill in the refrigerator. While pastry is chilling, prepare filling.</li>
-                    </ol>
-                <li>Prepare the Salmon Filling</li>
-                    <ol>
-                        <li>Wash and peel the potatoes. Cut into chunks and boil in a medium size pot of water until tender, about 12 minutes. Drain, mash the potatoes, and set aside.</li>
-                        <li>Melt the butter in a large skillet over medium heat. Add the onions, and sauté until they are softened, about 5 minutes.</li>
-                        <li>Add the 1/2-cup of water to the skillet.</li>
-                        <li>Season the salmon fillet with salt and pepper, and place it into the skillet skin side down.</li>
-                        <li>Spoon liquid and onions over the salmon, cover the skillet, and cook until the salmon is opaque, about 5 minutes. Turn off the heat and let the salmon cool slightly.</li>
-                        <li>Remove the skin and break the salmon into pieces. Add the salmon, onions, and poaching liquid to the mashed potatoes and mix to combine. Taste and adjust salt and pepper if needed.</li>                       
-                    </ol>
-                <li>Assemble the Salmon Pie</li>
-                    <ol>
-                        <li>Preheat the oven to 400°F.</li>
-                        <li>On a lightly floured surface, divide dough in half and form two balls. Flatten one ball with your hands, and roll dough to about 12-inches in diameter, to fit a 9-inch pie pan.</li>
-                        <li>Place the pastry into the pie plate and add the salmon pie filling. Gently pat the filling down to remove any air spaces.</li>
-                        <li>Brush around the outer edge of the pastry with the beaten egg. Roll out the top pastry and place on top of the pie filling.</li>
-                        <li>Fold the top crust under the bottom crust and pinch the edges. Brush with egg wash and cut vent holes.</li>
-                        <li>Bake the salmon pie in a preheated oven for 30-35 minutes, or until the pastry is golden brown. While the salmon pie is baking, make the dill béchamel sauce.</li>
-                    </ol>
-                <li>Make the Lemon Dill Béchamel Sauce</li>
-                    <ol>
-                        <li>Melt the butter in a small saucepan over medium heat. Add the flour and whisk until smooth. Gradually add milk stirring constantly. When sauce begins to thicken, add the lemon juice, dill, and salt and pepper to taste. Simmer for 2 minutes. Keep warm until ready to serve.</li>
-                        <li>Remove the pie from oven and let it cool for at least 10 minutes before serving. Cut into pie wedges, drizzle with the dill sauce if desired, and serve warm.</li>
-                        <li>Yield: Makes 1 pie, about 8 servings.</li>
-                    </ol>
-                <li></li>
-                <li></li>
-                
+                <li>How to make croutons
+                </br>The crunchy homemade garlic croutons really elevate this salad, making it look and taste quite fancy. The cheese crusted onto each little toast will have you snacking on these croutons!</li>
+                        <ol>
+                            <li>Cut baguette in half lengthwise and slice into 1/4″ thick pieces and place on baking sheet.</li>
+                            <li>Combine 3 Tbsp extra virgin olive oil with minced garlic. toss breads with garlic infused oil and 2 Tbsp parmesan.</li>
+                            <li>Spread Evenly and Bake to desired crispness.</li>
+                        </ol>
+                        </br>
+                <li>How to Make Caesar Salad Dressing
+                </br>The caesar salad dressing comes together so fast and all you need is a bowl and whisk. This Caesar dressing is light, healthy and packs so much fresh flavor without needing much salt at all. </li>
+                        <ol>
+                            <li>Whisk together minced garlic, dijon, Worcestershire, lemon juice and red wine vinegar.</li>
+                            <li>Whisking while adding oil emulsifies the dressing for a smooth and creamy (not oily) consistency.</li>
+                            <li>Season with 1/2 tsp salt and 1/8 tsp black pepper, or to taste.</li>                       
+                        </ol>
+                    </br>
+                <li>How to Make Caesar Salad
+                </br>In a large mixing bowl, combine all of your ingredients and toss gently to coat the lettuce in caesar dressing. This recipe makes enough croutons for two full salads so you'll have them ready to go for round 2!
+                </br><strong><em>Cook's tip:</em></strong> to get those lovely parmesan shavings, all you need is a block of parmesan and a potato peeler.</li>             
             </ul>
