Add classes and stylesheet

--- a/recipes/salmon-pie.html
+++ b/recipes/salmon-pie.html
@@ -1,9 +1,9 @@
-<h1>Salmon Pie</h1>
+<h1 class="recipe-name">Salmon Pie</h1>
     <img src="../images/salmon-pie_1200x1024.webp" alt="A Delicious Salmon Pie" width="500">
         <h2>Description</h2>
             <p>In coastal areas of Canada and New England where fish was abundant, salmon was commonly used for making tourtière. Salmon pie is a simple but delicious pie made from a combination of salmon, potatoes, onions, seasonings, and baked in a flaky piecrust.</p>
             <p>This recipe for salmon pie is a seaside version of the classic French Canadian meat pie. It is often served right along with meat pie on Christmas Eve and New Years Eve.</p>
-        <h2>Ingredients</h2>
+        <h2 class="ingredients">Ingredients</h2>
             <ul>
                 <li>2 cups flour</li>
                 <li>butter</li>
@@ -15,7 +15,7 @@
                 <li>lemon juice</li>
                 <li>dill</li>
             </ul>
-        <h2>Steps</h2>
+        <h2 class="steps">Steps</h2>
             <ul>
                 <li>Prepare the Pie Pastry</li>
                     <ol>
