--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -1,15 +1,15 @@
-<h1>Caesar Salad</h1>
+<h1 class="recipe-name">Caesar Salad</h1>
     <img src="../images/Caesar-Salad-Recipe-3.jpg" alt="A Splendid Caesar Salad" width="500">
         <h2>Description</h2>
             <p>Classic Caesar Salad with crisp homemade croutons and a light caesar dressing - for when you want to impress your dinner guests.</p>
-        <h2>Ingredients</h2>
+        <h2 class="ingredients">Ingredients</h2>
             <ul>
                 <li>1 large or 2 small heads of romaine lettuce</li>
                 <li>Parmesan cheese, shredded or shaved</li>
                 <li>Crisp croutons - homemade can be made several days ahead. The recipe below makes enough for 2 salads.</li>
                 <li> Caesar salad dressing - homemade is best and here is our favorite store-bought dressing in a pinch</li>
             </ul>
-        <h2>Steps</h2>
+        <h2 class="steps">Steps</h2>
             <ul>
                 <li>How to make croutons
                 </br>The crunchy homemade garlic croutons really elevate this salad, making it look and taste quite fancy. The cheese crusted onto each little toast will have you snacking on these croutons!</li>
@@ -31,3 +31,4 @@
                 </br>In a large mixing bowl, combine all of your ingredients and toss gently to coat the lettuce in caesar dressing. This recipe makes enough croutons for two full salads so you'll have them ready to go for round 2!
                 </br><strong><em>Cook's tip:</em></strong> to get those lovely parmesan shavings, all you need is a block of parmesan and a potato peeler.</li>             
             </ul>
+
