--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -1,6 +1,10 @@
+<div>
+    <link rel="stylesheet" href="recipe-styles.css">
+</div>
+
 <h1 class="recipe-name">Caesar Salad</h1>
-    <img src="../images/Caesar-Salad-Recipe-3.jpg" alt="A Splendid Caesar Salad" width="500">
-        <h2>Description</h2>
+    <img src="../images/Caesar-Salad-Recipe-3.jpg" alt="A Splendid Caesar Salad" width="250">
+        <h2 class="description">Description</h2>
             <p>Classic Caesar Salad with crisp homemade croutons and a light caesar dressing - for when you want to impress your dinner guests.</p>
         <h2 class="ingredients">Ingredients</h2>
             <ul>
