--- a/recipes/sour-cream-pasta.html
+++ b/recipes/sour-cream-pasta.html
@@ -1,6 +1,10 @@
+<div>
+    <link rel="stylesheet" href="recipe-styles.css">
+</div>
+
 <h1 class="recipe-name">Sour Cream Pasta</h1>
     <img src="../images/sajtos-tejfolos-teszta.jpg" alt="A Plate of Sour Cream Pasta" width="500">
-        <h2>Description</h2>
+        <h2 class="description">Description</h2>
             <p>Classic, simple Hungarian dish according to my wife. Won't impress guests but will do the job.</p>
         <h2 class="ingredients">Ingredients</h2>
             <ul>
